--- a/C:C++/M.I.N.D./CMakeLists.txt
+++ b/C:C++/M.I.N.D./CMakeLists.txt
@@ -3,4 +3,4 @@ project(M_I_N_D_)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(M_I_N_D_ main.cpp)
+add_executable(M_I_N_D_ main.cpp PrimeFinder.hpp)
